# my_project

./: .gitignore  pyproject.toml
mypackage/: __init__.py  core.py
mypackage/tests/: test_beam.py
newdocs/: conf.py  index.rst  mypackage.rst
newdocs/_build/html/: .buildinfo  genindex.html  index.html  mypackage.html  objects.inv  py-modindex.html  search.html  searchindex.js
newdocs/_build/html/.doctrees/: environment.pickle  index.doctree  mypackage.doctree
newdocs/_build/html/_modules/: core.html  index.html
